--- a/styles/style.css
+++ b/styles/style.css
@@ -1,33 +1,57 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-
-body{
-    font-size: 10px;
+body {
+  font-size: 10px;
 }
 
-
-.logo img{
-    width: 100px;
-    height: 100px;
-
+.logo img {
+  width: 100px;
+  height: 100px;
 }
 
-
-
-header{
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem 2rem;
+header {
+  display: flex;
+  justify-content: space-between;
 }
 
-.menu{
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 100vw;
-    background: purple;
+.menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  background: purple;
+  color: white;
+  font-size: 1.6rem;
+  font-weight: bold;
+  transform: translateX(100%);
+}
+
+.menu.active {
+  transform: translateX(0);
+}
+
+.burger {
+  height: 3.4rem;
+  width: 3.4rem;
+  margin: 0.5rem 0.5rem;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  background: none;
+  border: none;
+}
+
+.burger span {
+  width: 100%;
+  height: 0.4rem;
+  background-color: black;
 }
