--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
 
 body {
   font-size: 10px;
+  overflow-x: hidden;
 }
 
 .logo img {
@@ -42,16 +43,53 @@ header {
 .burger {
   height: 3.4rem;
   width: 3.4rem;
-  margin: 0.5rem 0.5rem;
+  margin: 1.2rem 0.9rem;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
-  background: none;
+  background: transparent;
   border: none;
+  align-items: flex-end;
+  cursor: pointer;
+  
+}
+
+.burger.active{
+    z-index: 10;
+   
+}
+
+
+.burger.active > span{
+    background: white;
 }
 
 .burger span {
   width: 100%;
   height: 0.4rem;
   background-color: black;
+  border-radius: 8.5rem;
+  transition: all 0.3s;
+}
+
+.burger span:nth-child(2){
+    width: 80%;
+} 
+
+.burger span:nth-child(3){
+    width: 60%;
+} 
+
+.burger.active >span:nth-child(1){
+    transform: rotate(-45deg)translateY(0.9rem)
+}
+
+
+.burger.active >span:nth-child(2){
+
+    transform: rotate(45deg) translateY(-0.6rem)
+}
+
+.burger.active >span:nth-child(3){
+transform: translateX(200%);
 }
