--- a/styles/style.css
+++ b/styles/style.css
@@ -157,3 +157,22 @@ align-items: center;
    display: none;
 }
 }
+
+/* Section */
+
+.home-content{
+  font-size: 2.2rem;
+  text-align: center;
+  color: rgb(56, 3, 56);
+}
+
+.home-content span{
+  font-size: 1.4rem;
+}
+
+
+.home-img{
+  width: 40%;
+  margin: 0 auto;
+  display: block;
+}
