--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+
+:root{
+  --purple-gradient: linear-gradient(45deg,rgba(0,0,0,0.9,),rgba(0,0,0,0,0.8));
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -159,6 +164,9 @@ align-items: center;
 }
 
 /* Section */
+.home{
+  margin: 4rem 0 0 0;
+}
 
 .home-content{
   font-size: 2.2rem;
@@ -175,4 +183,46 @@ align-items: center;
   width: 40%;
   margin: 0 auto;
   display: block;
+}
+
+.home-icons{
+background-color: rgb(71, 22, 78);
+margin: 1rem auto;
+width: max-content;
+padding: .3rem 1rem;
+border-radius: .5rem;
+
+}
+
+.scroll-down-button{
+  width: 1.5rem;
+  height: 5rem;
+  display: flex;
+  align-items: flex-end;
+  margin: 1.5rem auto;
+  background:none
+  border: 1px solid black;
+  border-radius:1rem;
+  
+
+}
+
+.scroll-down-circle{
+  width: 1.3rem;
+  height: 1.3rem;
+  border-radius: 50%;
+  background-color: rgb(71, 22, 78);
+  animation: circleMovement 1s infinite alternate-reverse;
+}
+
+
+
+@keyframes circleMovement{
+
+  from{
+    transform: translateY(0%);
+  }
+  to{
+    transform: translateY(-100%);
+  }
 }
