--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@ body {
 .section-title{
   font-size: 32px;
  text-align: center;
- margin: 5.2rem auto;
+ margin: 9.5rem auto .4rem auto;
 
 width: max-content;
 }
@@ -68,9 +68,10 @@ display: grid;
 }
 
 .project-content-card{
-  width: 80%;
-  margin: 1.2rem auto;
+  width: 70%;
   
+  margin: 1.2rem auto;
+
   border-radius: 2rem;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.062)
 }
@@ -82,10 +83,13 @@ display: block;
 }
 
 .project-card-info{
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  width: 98%;
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
+ margin: 0 auto;
+
+
  
 
 }
@@ -93,9 +97,7 @@ display: block;
 .project-name{
   font-size: 1.6rem;
   font-weight: bold;
-
-  margin-top: 0;
-margin-left: 0.4rem;
+margin: 0 0 0 0.4rem;
   border-bottom: 2px solid rgb(119, 0, 255);
 width: max-content;
   padding-right: 5rem;
@@ -123,8 +125,10 @@ width: max-content;
 
 .project-description{
 text-align: justify;
-margin: 0.8rem 0.4rem;
+color: rgba(105, 103, 103, 0.845);
 font-size: 1.2rem;
+width:94%;
+margin: 0 auto;
 }
 
 
@@ -133,6 +137,7 @@ font-size: 1.2rem;
   width: max-content;
   height: max-content;
   margin: 0 ;
+  color: rgb(84, 7, 84);
   font-size: 1.2rem;
   font-weight: bold;
   border-bottom: 1px solid orange;
@@ -141,18 +146,21 @@ font-size: 1.2rem;
 
 .project-technologies{
 
-margin:2rem 0 0 .4rem;
+width:98%;
  height: max-content;
+ margin: 0.6rem auto;
  
  
 }
 
 .technologies-used-icons{
-  margin: .8rem 0rem;
+  margin: .8rem 0.4rem;
   display: flex;
  align-items: center;
- justify-content: space-evenly;
- width: 20%;
+ justify-content: flex-start;
+ 
+ gap:0.6rem;
+width: 100%;
 }
 
 .technologies-used-icons img:hover{
@@ -412,7 +420,9 @@ border-radius: .5rem;
  width: 50%;
   }
 
-
+.section-title{
+  margin-top: 11rem;
+}
   .technologies-title{
 
     padding: 0 4rem 0 0.5rem;
@@ -445,37 +455,40 @@ align-items: center;
 }
 
 /* 1400 px */
-@media only screen and (min-width:1400px){
-  
-  .projects-content{
-    grid-template-columns: repeat(4,1fr);
-  }
 
-  .scroll-down-button{
-    display: none;
-  }
-
-  .home{
-    margin: 9rem auto;
-  gap:0;
-  
-  }
-  .home .home-content{
-    font-size: 3.3rem;
-
-  }
-
-  .home .home-img{
-   width: 45%;
-  
-  }
-  }
 
   @media only screen and (min-width:1400px){
 
-.home{
-gap:9rem;
 
+    .section-title{
+      margin-top: 11.4rem;
+    }
+
+    .projects-content{
+      grid-template-columns: repeat(4,1fr);
+    }
+
+    .project-content-card{
+      width: 75%;
+     
+    }
+
+
+
+  
+    .scroll-down-button{
+      display: none;
+    }
+
+.home{
+gap:8.8rem;
+
+}
+
+.home-content{
+  
+
+margin-bottom: 100px;
 }
 
 .home .home-content h1{
@@ -489,12 +502,18 @@ font-size: 3.4rem;
 
 
 .home .home-img{
-  width: 40%;
+  
+  width: 45%;
 }
   }
 
 
   @media only screen and (min-width:1650px){
+
+    .section-title{
+      margin-top: 8rem;
+    }
+
 
 .home{
   gap:13rem;
