--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,7 @@ body {
   width: 100px;
   height: 100px;
   pointer-events: none;
+  
 }
 
 #home {
@@ -101,11 +102,11 @@ font-size: 1.2rem;
 /* PROJECTS */
 .projects-content {
   display: grid;
+
 }
 
 .project-content-card {
-  width: 85%;
-
+  width: 82%;
   margin: 1.2rem auto;
 
   border-radius: 2rem;
@@ -113,7 +114,7 @@ font-size: 1.2rem;
 }
 
 .project-content-card img {
-  width: 80%;
+  width: 60%;
   margin: 1.2rem auto;
   display: block;
 }
@@ -182,8 +183,8 @@ font-size: 1.2rem;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-
-  gap: 0.6rem;
+  margin-left: 20px;
+  gap: 0.9rem;
   width: 100%;
 }
 
@@ -213,6 +214,8 @@ font-size: 1.2rem;
 header {
   display: flex;
   justify-content: space-between;
+
+  margin: 0 auto;
 }
 
 .menu {
@@ -306,13 +309,18 @@ header {
 }
 
 @media only screen and (width<=300px) {
+  
+
+  
   .home-content {
     width: 70%;
-    margin: 0 auto;
+    display: flex;
+ 
   }
+
 }
 
-/* Deskop menu */
+/*  1000px Deskop menu */
 
 @media only screen and (min-width: 1000px) {
   .section-title {
@@ -333,6 +341,10 @@ header {
     grid-template-columns: repeat(2, 1fr);
   }
 
+  .project-content-card img {
+    width: 80%;
+ 
+  }
   .home .home-img {
     width: 40%;
   }
@@ -395,6 +407,13 @@ header {
   margin: 4rem 0 0 0;
 }
 
+.projects-content{
+  width: 90%;
+  margin: 0 auto;
+}
+
+
+
 .home-content h1 {
   font-size: 3.2rem;
 }
@@ -447,7 +466,7 @@ border-radius: .5rem;
 }
 
 /*------------------ 1200px ----------------*/
-@media only screen and (min-width: 1200px) {
+@media only screen and (width>= 1200px) {
   .technologies-used-icons {
     margin: 0.8rem 0;
     width: 50%;
@@ -485,10 +504,16 @@ border-radius: .5rem;
 
   .home .home-content {
     margin-left: 2.2rem;
+    width: 50%;
   }
 
   .project-content-card {
     width: 80%;
+  }
+
+  .project-content-card img {
+    width: 65%;
+  
   }
 
   .scroll-down-button {
@@ -504,11 +529,19 @@ border-radius: .5rem;
   }
 
   .projects-content {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4,1fr);
+
+    width: 88%;
+    margin: 0 auto;
+    gap:2rem;
   }
 
   .project-content-card {
-    width: 75%;
+    width: 100%;
+  }
+
+  .project-content-card img{
+    width: 80%;
   }
 
   .scroll-down-button {
@@ -533,6 +566,7 @@ border-radius: .5rem;
 
   .home .home-img {
     width: 45%;
+
   }
 }
 
@@ -544,14 +578,17 @@ border-radius: .5rem;
   .home {
     gap: 13rem;
     margin: 5rem auto;
+
+    display: flex;
+    
   }
 
-  .home .home-img {
-    width: 45%;
-  }
 
   .home .home-content {
-    margin: 0px 0px 80px 0px;
+    margin: 0px auto;
+    
+
+
   }
 
   .home .home-content h1 {
@@ -561,15 +598,34 @@ border-radius: .5rem;
     font-size: 1.4rem;
   }
 
-  .project-content {
-  grid-template-columns: repeat(4, 1fr)
+
+
    
+
+
+
+  .project-content-card {
+   
+width: 85%;
     padding: 2rem 0 0 0;
   }
 
-  .project-content-card {
-    width: 65%
+
+.project-content-card {
+  width: 80%;
+}
+
+  .about .section-title {
+    margin: 9.5rem auto 1.6rem auto;
+  }
+
+  .about img {
+    width: 45%;
+    margin-top: 3.2rem;
    
-    padding: 2rem 0 0 0;
+  }
+
+  .description{
+    width: 80%;
   }
 }
