--- a/styles/style.css
+++ b/styles/style.css
@@ -390,6 +390,21 @@ header {
   width: 70%;
   margin: 5rem auto;
   display: flex;
+  gap:1rem;
+  justify-content: center;
+  padding: 2rem;
+  flex-wrap: wrap;
+}
+
+.tchnologies-item{
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.062);
+  padding: 2rem;
+ 
+  
+}
+
+.tchnologies-item img{
+  width: 5rem;
 }
 /*  1000px Deskop menu */
 
